kube/pods.yaml
apiVersion: v1
kind: Pod
metadata:
 name: mynewpod
spec:
  containers:
    - image: docker.io/kundankkkrishna/newapp:latest
      name: mynewapp
      ports:
        - containerPort: 8081
      resources:
        limits:
          cpu: 100m
          memory: 128Mi
        requests:
          cpu: 100m
          memory: 128Mi
