kube/pods.yml
apiVersion: v1
kind: Pod
metadata:
 name: mypod
spec:
  containers:
    - image: docker.io/kundankkkrishna/newapp:latest
      name: finalapp
      ports:
        - containerPort: 8081
      resources:
        limits:
          cpu: 100m
          memory: 128Mi
        requests:
          cpu: 100m
          memory: 128Mi
