kube/deployments.yaml
apiVersion: v1
kind: Pod
metadata:
 name: mypod
spec:
  containers:
    - image: docker.io/kundankkkrishna/finalapp:latest
      name: myapp
      ports:
        - containerPort: 8081
      resources:
        limits:
          cpu: 100m
          memory: 128Mi
        requests:
          cpu: 100m
          memory: 128Mi
          
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: myapp
spec:
    selector:
        matchLabels:
            app: myapp
    replicas: 2
    template:
        metadata:
            labels:
                app: myapp
        spec:
            containers:
                - name: NodeAppContainer
                  imagePullPolicy: Never
                  image: docker.io/kundankkkrishna/finalapp:latest
                  resources:
                      limits:
                          cpu: 50m
                          memory: 100Mi
                      requests:
                          cpu: 25m
                          memory: 10Mi
                  ports:
                      - containerPort: 8080
                      
---
apiVersion: v1
kind: Service
metadata:
  name: myservice
  labels:
    app: myapp
spec:
  type: LoadBalancer
  ports:
    - port: 8081
      targetPort: 8081
  selector:
    app: myapp
