kube/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: mynewservice
  labels:
    app: mynewapp
spec:
  type: LoadBalancer
  ports:
    - port: 8081
      targetPort: 8081
  selector:
    app: mynewapp
